Wed Jun 15 19:04:38 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* python/tests/Makefile.am: add make tests to make check target
	  fixes #307786 Neal H. Walfield

Wed Jun 15 14:40:56 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: another cleanup of poll only support from 
	  Neal H. Walfield which should not affect the dnotify back-end,
	  should fix #307745

Wed Jun 15 13:01:11 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_api.c server/gam_channel.c: reverted patch from
	  #306706 as this broke authentication and debugging.
	* server/gam_server.c: removed warnings.

Tue Jun 14 14:30:54 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_connection.c: another cleanup patch from Neal H. Walfield

Mon Jun 13 18:35:29 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_hurd_mach_notify.c server/gam_kqueue.c
	  server/gam_listener.c server/gam_listener.h server/gam_poll.c: 
	  another cleanup patch from Neal H. Walfield

Mon Jun 13 16:57:35 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_node.c server/gam_poll.c: applied 2 cleanup patches
	  from Neal H. Walfield

Mon Jun 13 11:11:43 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_dnotify.c server/gam_dnotify.h server/gam_inotify.c
	  server/gam_inotify.h server/gam_poll.c server/gam_server.c: applied
	  patch from  John McCutchan for the inotify back-end #171201 and more
	  debugging informations. Had to fix gam_poll_init_full() too.

Mon Jun 13 10:40:13 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* gamin.spec.in: updated the Changelog

Fri Jun 10 17:15:38 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* NEWS configure.in doc/gamin.html doc/news.html: prepared release
	  0.1.1

Fri Jun 10 16:30:04 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_excludes.c: removed an extra variable
	* server/gam_poll.c: fixed problem raised by dnotify4.py, watching